--- a/styles/hero/hero.module.scss
+++ b/styles/hero/hero.module.scss
@@ -5,6 +5,8 @@
   display: flex;
 
   @include small-screen {
+    margin-top: 0rem;
+    padding: 1rem 3rem;
     flex-direction: column;
   }
   .text {
@@ -28,8 +30,8 @@
     @include small-screen {
       position: absolute;
       right: -10rem;
-      max-height: 40rem;
-      max-width: 40rem;
+      //   max-height: 27rem;
+      //   max-width: 25rem;
     }
   }
 }
